<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Preferans online</string>
    <string name="action_settings">Settings</string>
    <string name="exist_rooms">Existing rooms</string>
    <string name="entry_exit">Exit</string>
    <string name="entry_quit">Quit</string>
    <string name="currently_logged_as">Currently logged in as %s</string>
    <string name="entry_settings">Settings</string>
    <string name="entry_start_new_game">Start new game</string>
    <string name="entry_picture_description">Logo picture</string>
    <string name="settings_back_button">Back</string>
    <string name="player_name">Change player name</string>
    <string name="save_settings">Apply</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="create_room">Create new room</string>
    <string name="start_back">back</string>
    <string name="accept_room">accept</string>
    <string name="set_vist_cost">Set vist cost</string>
    <string name="back">Back</string>
    <string name="enable_stalingrad">Enable &quot;stalingrad&quot;</string>
    <string name="cancel">Cancel</string>
    <string name="about_game">About</string>
    <string name="connect_to_room">Connect</string>
    <string name="chooseBullet">Bullet</string>
    <string name="gameType">Game type</string>
    <string name="your_money">Your money: </string>
	<string name="get_regid">Get new registration id</string>
	<string name="register">Register!</string>
	<string name="registration_step">Simple registration step</string>
	<string name="choose_login">Choose login</string>
	<string name="choose_password">Choose password</string>
	<string name="login">login</string>
	<string name="password">password</string>

    <string name="sign_in">Sign in!</string>

    <string name="full_room_info">Room info</string>
	<!-- full room information headers -->
	<string name="room_id">ID</string>
	<string name="bullet">Bullet</string>
	<string name="game_type">Game type</string>
	<string name="whist_cost">Whist cost (coins)</string>
	<string name="no_whist_rasp_exit">Raspasy are stopped after no-whist game</string>
	<string name="players_number">Number of players</string>
	<string name="rasp_exit">Raspasy exit</string>
	<string name="rasp_prog">Raspasy progression</string>    
	<string name="has_password">Has password</string> 
	<string name="has_stalingrad">Has &quot;stalingrad&quot;</string>   
	<string name="ten_whist">Has whisting on ten game</string>
	<string name="without_three">Has &quot;without 3&quot; game exit</string>  
	
		    
	<string name="server_ip">192.168.1.34</string>
    <string name="google_app_id">264728257590</string>
</resources>
