<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/old_paper" >

    <TableRow
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:id="@+id/fi_textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
            android:text="@string/room_id"
            android:textColor="@color/full_info_table_left_text_column"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fi_roomID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
            android:textColor="@color/full_info_table_right_text_column"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:id="@+id/fi_textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
            
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/has_password"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fi_hasPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:id="@+id/fi_textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
            android:textStyle="bold"
            
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/gameType" />

        <TextView
            android:id="@+id/fi_gameType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/players_number" />

        <TextView
            android:id="@+id/fi_playersNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/bullet" />

        <TextView
            android:id="@+id/fi_bullet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/whist_cost" />

        <TextView
            android:id="@+id/fi_whistCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/has_stalingrad" />

        <TextView
            android:id="@+id/fi_hasStalingrad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/rasp_exit" />

        <TextView
            android:id="@+id/fi_raspExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/rasp_prog" />

        <TextView
            android:id="@+id/fi_raspProg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
            
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/no_whist_rasp_exit"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fi_noWhistRaspExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fi_textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/without_three" />

        <TextView
            android:id="@+id/fi_withoutThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fi_textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
             android:textStyle="bold"
             
            android:textColor="@color/full_info_table_left_text_column"
            android:text="@string/ten_whist" />

        <TextView
            android:id="@+id/fi_tenWhist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"
            android:textColor="@color/full_info_table_right_text_column"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="TextView" />
    </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="4dp"
        android:weightSum="2">

        <Button
            android:id="@+id/fi_button_hide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_left"
            android:layout_marginRight="@dimen/full_room_info_margin_hor"

            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher"
            android:text="@string/back" />

        <Button
            android:id="@+id/fi_button_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_room_info_margin_hor"
            android:layout_marginRight="@dimen/full_room_info_margin_left"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher"
            android:text="@string/connect_to_room" />
    </TableRow>

</LinearLayout>